fix alignment

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -26,6 +26,7 @@
     }
     button {
       font-family: 'Roboto', sans-serif, Arial;
+      text-align: left;
     }
     * {
       box-sizing: initial;
@@ -387,6 +388,7 @@
           box-sizing: border-box;
           margin-left: 10%;
           outline: 0;
+          text-align: left;
         }
         button {
           background-color: #3d4ebc;
